--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,13 @@ spring.jpa.show-sql= true
 
 # REDIS (RedisProperties)
 # Redis数据库索引（默认为0）
-spring.redis.database=0  
+spring.redis.database=0
 # Redis服务器地址
 spring.redis.host=47.52.110.59
 # Redis服务器连接端口
-spring.redis.port=6379  
+spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
-spring.redis.password=
+spring.redis.password=dyq79089
 # 连接池最大连接数（使用负值表示没有限制）
 #spring.redis.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
